<resources>
    <string name="app_name" translatable="false">Kilojoule Counter</string>
    <string name="averageNKI">Average NKI (Nett Kilojoule Intake):</string>
    <string name="kj_burnt" translatable="false">0</string>
    <string name="kj_consumed" translatable="false">0</string>
    <string name="kni_value" translatable="false">0</string>
    <string name="date_text">Diary Entry for</string>
    <string name="add_new_entry">Add New Entry</string>
    <string name="add_new_entry_button_blue" translatable="false">add_new_entry_button_blue</string>
    <string name="back_arrow_button" translatable="false">back_arrow_button</string>
    <string name="home_icon_button" translatable="false">home_icon_button</string>
    <string name="kilojoules_consumed">Kilojoules consumed</string>
    <string name="nki" translatable="false">NKI</string>
    <string name="kilojoules_burnt">Kilojoules burnt</string>
    <string name="enter_kiloujoules_in_meal">Enter Kiloujoules in Meal</string>
    <string name="kj" translatable="false">kJ</string>
    <string name="add_exercise">Add Exercise</string>
    <string name="kilojoules_burnt_value" translatable="false">0</string>
    <string name="enter_kilojoules_burnt">Enter Kilojoules Burnt</string>
    <string name="kj_consumed_value" translatable="false">0</string>
    <string name="nki_value" translatable="false">0</string>
    <string name="add_meal">Add Meal</string>
    <string name="add_diary_entry">Add Diary Entry</string>
    <string name="home_button" translatable="false">home</string>
    <string name="plus_icon_button" translatable="false">plus_icon_button</string>
    <string name="button" translatable="false">Button</string>
    <string name="diary_entries">Diary Entries</string>
    <string name="avg_nki" translatable="false">0</string>
    <string-array name="meals">
        <item>Select a Meal</item>
        <item>Salad</item>
        <item>Cereal</item>
        <item>Burger</item>
        <item>Pizza</item>
        <item>Fruit</item>
    </string-array>
    <string-array name="exercises">
        <item>Select an Exercise</item>
        <item>Sprinting</item>
        <item>Jogging</item>
        <item>Walking</item>
        <item>Strength Training</item>
        <item>Cycling</item>
    </string-array>
</resources>
